--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: multi_crop_picker
 description: instagrammable multi crop picker. this package do multiple image select, with ratio, length, grid(crossAxisCount), etc args. (crop featrue based on xclud/flutter_crop, gallery feture based on CaiJingLong/flutter_photo_manager)
 repository: https://github.com/ukkoon/multi_crop_picker.git
+version: 0.0.2
+homepage: https://github.com/ukkoon/multi_crop_picker.git
 
-version: 0.0.1
-homepage:
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
